assets/css/style.css
/* ------ Google Fonts --------*/

@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500|Roboto:400,400i,500,500i&display=swap');

/*--------Colors ------- */

.bg-color-main {
    background-color: #404141;
}

.font-color-main {
    font-family: "Quicksand", sans-serif;
    color: #e6b873;
}

.font-color-inverse {
    font-family: "Quicksand", sans-serif;
    color:#404141;
}

p {
    color: #404141;
    font-family: "Quicksand", sans-serif;
}

/* ------- Header ----------- */

.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* --------- Section Heads -----------*/

.divider {
    text-align: center;
    padding-top: 1rem;
}

/* ---------- Navigation -------- */

.navbar-stick {
    display: flex;
    top: 0px;
    left: 0px;
    position: sticky;
    z-index: 999999;
}

.navbar-collapse {
    justify-content: center;
}

.navbar {
    background-color: #404141;
}

.nav-item {
    font-family: "Quicksand", sans-serif;
    background-color: #404141;
}

.navbar-dark .navbar-nav .nav-link {
    font-family: "Quicksand", sans-serif;
    color: #f6c67c;
}

.navbar-dark,
.navbar-nav:hover,
.nav-link:hover {
    color: #777777;
    transition-duration: .5s;
}

/* ------------About us -----------*/

.about-us {
    padding: 12.5rem 12.5rem;
}

.about-us-format {
    padding: 1rem;
    font-size: 1.25rem;
    align-self: center;
}

.about-us-card {
    padding: 0px;
    max-height: auto;
    max-width: 100%;

}

.about-us-image {
    padding: 0rem;
}

/* ----------Heads-------------*/

h1 {
    padding: 8rem 0rem;
    text-align: center;
}


/* ------------What we do ------------*/

.what-we-do {
    background-color: #404141;
 }

.wwd-card {
    padding: 0px;
    max-height: auto;
    max-width: 100%;

}

.content-align {
    text-align: center;
    margin-top: 5rem;
}

.wwd-format {
    font-size: 1.25rem;
    align-self: center;
    padding: 1rem 2rem;
}

/* -------- Fire & Acoustics --------*/

.faa-format {
    padding-bottom: 5rem;
}

.faa-font-format {
    font-size: 1.2rem;
}


/* ---------Finishing Touches ----------- */

.finishing-touches-format {
    background-color: #404141;
    padding-bottom: 5rem;
}

.card {
    border: 0rem;
    padding: 3rem;
}

/* -----------Icons -------------- */

.icon-format {
    padding-top: 1rem;
}

.icon {
    border-radius: 50%;
    border-style: solid;
    max-width: 30%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}


/* ------------Contact Us ------------ */

.contact-us {
    padding: 3rem;
}

.map {
    width: 100%;
    height: 50%;
}

/* --------------Footer -------------- */

.footer {
    padding-top: 1rem;
}

.social-links {
    padding-top: 1.25rem;
}

.social-links li a i {
    width: 3rem;
    height: 3rem;
    border-radius: 15%;
    font-size: 1.25rem;
    line-height: 3rem;
    text-align: center;
    color: #404141;
    background: #f6c67c;
}

/* -------- Behavior ------------- */

html {
    scroll-behavior: smooth;
}

